--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <script src="./script.js" defer></script>
-    <script src="./script-crud2.js" defer></script>
+    <script src="./script-crud.js" defer></script>
+    <!-- <script src="./script-crud2.js" defer></script> -->
 </head>
 
 <body>
@@ -64,7 +65,7 @@
                 </ul>
                 <div class="app__card-primary-button-wrapper">
                     <button id="start-pause" class="app__card-primary-button">
-                        <img class="app__card-primary-butto-icon" src="/imagens/play_arrow.png" alt="">
+                        <img class="app__card-primary-button-icon" src="/imagens/play_arrow.png" alt="">
                         <span>Começar</span>
                     </button>
                 </div>
